--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "ember-cli" : "0.0.25",
+    "ember-cli": "git+ssh://git@github.com:rjackson/ember-cli#remove-broccoli-bower",
+    "broccoli-static-compiler": "0.1.4",
     "originate": "0.1.5",
     "broccoli-template": "0.1.1",
-    "loom-generators-ember-appkit": "^1.1.1"
+    "loom-generators-ember-appkit": "^1.1.1",
+    "broccoli-ember-hbs-template-compiler": "^1.5.0"
   }
 }
