--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "ember-cli": "0.0.25",
+    "ember-cli" : "0.0.25",
     "originate": "0.1.5",
     "broccoli-ember-hbs-template-compiler": "^1.5.0",
-    "loom-generators-ember-appkit": "^1.1.1",
-    "broccoli-sass": "~0.1.4"
+    "loom-generators-ember-appkit": "^1.1.1"
   }
 }
