--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "ember-cli" : "0.0.25",
+    "ember-cli": "0.0.27",
     "originate": "0.1.5",
     "broccoli-ember-hbs-template-compiler": "^1.5.0",
-    "loom-generators-ember-appkit": "^1.1.1"
+    "loom-generators-ember-appkit": "^1.1.1",
+    "express": "^4.1.1",
+    "glob": "^3.2.9"
   }
 }
