--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "loader": "stefanpenner/loader.js#1.0.0",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.1",
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
-    "ember-qunit-notifications": "^0.0.1"
+    "ember-qunit-notifications": "^0.0.1",
+    "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.1"
   }
 }
