--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,29 @@
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
     "ember-qunit-notifications": "^0.0.3",
     "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.2"
+    "ember-auth": "~9.0",
+    "ember-auth-request-jquery": "^1.0",
+    "ember-auth-response-json": "^1.0",
+    "ember-auth-strategy-token": "^1.0",
+    "ember-auth-session-cookie": "^1.0",
+    "ember-auth-module-ember-data": "^1.0",
+    "ember-auth-module-rememberable": "^1.0",
+    "font-awesome": "~4.0.3",
+    "modernizr": "git://github.com/DiMarcello/bower-modernizr#2.7.2",
+    "foundation": "latest",
+    "fastclick": "git://github.com/DiMarcello/fastclick#broccoli",
+    "bootstrap": "~3.1.1",
+    "quill": "~0.15.0",
+    "summernote": "~0.5.1",
+    "pikaday": "dbushell/Pikaday",
+    "bourbon": "thoughtbot/bourbon#bourbon-3.2.0",
+    "d3": "~3.4.8",
+    "raphael": "~2.1.2",
+    "chart.js": "~0.1.0",
+    "ember-charts": "~0.1.0",
+    "crossfilter": "~1.3.7",
+    "autogrow-textarea": "*",
+    "textarea-autosize": "~0.2.0",
+    "lodash": "~2.4.1"
   }
 }
