--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.2",
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
     "ember-qunit-notifications": "^0.0.3",
-    "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.2"
+    "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.2",
     "ember-auth": "~9.0",
     "ember-auth-request-jquery": "^1.0",
     "ember-auth-response-json": "^1.0",
