Update ember-cli to master.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.2.0",
     "glob": "^3.2.9",
     "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-ember-data": "0.1.0"
+    "ember-cli-ember-data": "0.1.0",
+    "broccoli-asset-rev": "0.0.10"
   }
 }
