--- a/.jshintrc
+++ b/.jshintrc
@@ -2,8 +2,7 @@
   "predef": {
     "document": true,
     "window": true,
-    "-Promise": true,
-    "SomeTestENV": true
+    "-Promise": true
   },
   "browser" : true,
   "boss" : true,
